# dlthub-poc

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.dlt/: config.toml  secrets.toml
mongodb/: README.md  __init__.py  helpers.py  pipeline.py
